--- a/master_proposal_template.tex
+++ b/master_proposal_template.tex
@@ -12,7 +12,7 @@
 
 \title{Master Thesis Proposal Template with Time Management Strategy}
 
-\author{Add your name}
+\author{Johanna Wittig}
 
 \date{\today}
 
@@ -25,15 +25,17 @@ This template provides a structured outline for your master thesis proposal and 
 
 \section{1. Summary}
 What is the main purpose of your research, and why is it significant?\\
+The main purpose is to investigate the influence to the high global surface temperatures 2023 of the emitted water vapor and sulfate aerosole by the Hunga Tonga.
 
 \section{2. Research Background}
-What previous research provides context for your study, and what gaps does it address?\\
+What previous research provides context for your study, and what gaps does it address?\\ The emitted sulfate aerosols resulted in a negative forcing and leads to a cooling of 0.038°C on the southern hemisphere in 2022 (Schoeberl et al., 2023). However, the water vapor anomaly leads to an increase in the probability of 7\% to exceed 1.5°C by 2026 (Jenkins et al., 2023). 
 
 \section{3. Research Objectives (incl. Research Questions)}
-State the main objectives of your research and outline specific research questions.
+State the main objectives of your research and outline specific research questions.\\
+The main objectives are to investigate rather the eruption of the vulcano contributes to the high global surface temperatures 2023 and to see to what extend an eruption would have contributed to the temperature increase in other years (like in years wit stronger ENSO).
 
 \section{4. Methods and Data}
-Which methods will you use to answer your research questions, and why are they suitable?\\
+Which methods will you use to answer your research questions, and why are they suitable?\\ I will use model data from the ECHAM6.3–HAM2.3. It is the latest version of the model and is used to do nudged runs.
 
 \section{5. Timeline and Milestones (incl. Gantt Chart)}
 What are the main stages of your research, and when do you plan to complete them?\\
